Fix facebook and skype for you

--- a/index.htm
+++ b/index.htm
@@ -185,6 +185,8 @@
                     <br />
                     <a href="mailto:schoedon@uni-potsdam.de">MAIL</a>/PGP FINGERPRINT <em>pub 4096R/61F42A05</em> (<a href="./0x61f42a05.asc" target="_blank">KEY</a>)
                     <br /> D517 19CC B4A8 E6F6 17FD 19F2 <u>6CB8 1E14 61F4 2A05</u>
+                    <br />
+                    <br /> <del>FACEBOOK</del>, <del>WHATSAPP</del>, <del>SKYPE</del>
                 </div>
             </div>
         </div>
