Add personal note.

--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,11 @@
     │ :-) │    5chdn / something with computers                            │
     │     │    ================================                            │
 ┌───┴─────┴────────────────────────────────────────────────────────────────┴───┐
+│ personal                                                                     │
+│ ========                                                                     │
+│ - i'm born, grew up and live in berlin, not 30 yet                           │
+│ - my two kids call me <u>afri</u>, you can do that too                              │
+│                                                                              │
 │ education                                                                    │
 │ =========                                                                    │
 │ - b.sc. in applied computer sciences, environmental informatics, simulation  │
@@ -37,7 +42,6 @@
 │ - <a href="https://votesapp.net/" target="_blank">votesapp</a> (stimmungsapp n.e.v.)                                             │
 │                                                                              │
 │ member of <a href="https://ccc.de/" target="_blank">ccc</a>, <a href="https://www.eff.org/">eff</a>, <a href="https://www.fiff.de/">fiff</a>, <a href="https://fsfe.org/">fsfe</a>, <a href="https://www.gi.de/" target="_blank">gi</a>. moderator at <a href="https://ethereum.stackexchange.com/users?tab=moderators" target="_blank">ethereum.se</a>, <a href="https://www.reddit.com/r/ethereum/about/moderators" target="_blank">r/ethereum</a>     │
-│                                                                              │
 │ hobbies none. all listings in alphabetical order.                            │
 │                                                                              │
 │ i do not do any <del>frontend</del>, <del>web-design</del>, <del>javascript</del>, <del>user-experience</del>.           │
@@ -48,7 +52,8 @@
     │ contact me via <a href="mailto:schoedon@uni-potsdam.de">mail</a>/pgp fingerprint <em>pub 4096r/61f42a05</em> (<a href="./0x61f42a05.asc" target="_blank">key</a>)         │
     │            d517 19cc b4a8 e6f6 17fd 19f2 <u>6cb8 1e14 61f4 2a05</u>         │
     │                                                                      │
-    │ i don't use <del>facebook</del>, <del>whatsapp</del>, <del>skype</del>, <del>threema</del>.                      │
+    │ i don't use <del>facebook</del>, <del>whatsapp</del>, <del>skype</del>, <del>threema</del>. no cats had to be    │
+    │ pictured for this site. magically works without css and javascript.  │
     └──────────────────────────────────────────────────────────────────────┘</pre>
   </body>
 </html>
