Remove boxes to be more mobile friendly.

--- a/index.htm
+++ b/index.htm
@@ -7,53 +7,57 @@
     <title>5chdn / something with computers</title>
   </head>
 
-  <body>
-    <pre>    ┌─────┬────────────────────────────────────────────────────────────────┐
-    │     │                                                                │
-    │ :-) │    5chdn / something with computers                            │
-    │     │    ================================                            │
-┌───┴─────┴────────────────────────────────────────────────────────────────┴───┐
-│ personal                                                                     │
-│ ========                                                                     │
-│ - i'm born, grew up and live in berlin, not 30 yet                           │
-│ - my two kids call me <u>afri</u>, you can do that too                              │
-│                                                                              │
-│ education                                                                    │
-│ =========                                                                    │
-│ - b.sc. in applied computer sciences, environmental informatics, simulation  │
-│ - m.sc. in computer graphics systems, geoinformation sciences, visualization │
-│                                                                              │
-│ experience                                                                   │
-│ ==========                                                                   │
-│ - backend developer, programmer                                              │
-│ - decentralized systems, peer-to-peer, blockchain                            │
-│ - linux system adminstration, it operations, devops                          │
-│ - radio station technology, streaming, scheduling, automation                │
-│ - software engineering, development, deployment                              │
-│ - technical communication, community management                              │
-│                                                                              │
-│ worked for                                                                   │
-│ ==========                                                                   │
-│ - <a href="http://www.abgeordnetenwatch.de/" target="_blank">abgeordnetenwatch</a> (parlamentwatch e.v.)                                    │
-│ - <a href="http://www.bfs.de/" target="_blank">german federal office for radiation protection</a> (bundesamt)                 │
-│ - <a href="https://hpi.de/" target="_blank">hasso plattner institute</a> (gmbh)                                            │
-│ - <a href="https://www.htw-berlin.de/" target="_blank">hochschule f&uuml;r technik und wirtschaft berlin</a> (a&ouml;r)                         │
-│ - <a href="https://www.route360.net/" target="_blank">motion intelligence</a> (gmbh)                                                 │
-│ - <a href="https://votesapp.net/" target="_blank">votesapp</a> (stimmungsapp n.e.v.)                                             │
-│                                                                              │
-│ member of <a href="https://ccc.de/" target="_blank">ccc</a>, <a href="https://www.eff.org/">eff</a>, <a href="https://www.fiff.de/">fiff</a>, <a href="https://fsfe.org/">fsfe</a>, <a href="https://www.gi.de/" target="_blank">gi</a>. moderator at <a href="https://ethereum.stackexchange.com/users?tab=moderators" target="_blank">ethereum.se</a>, <a href="https://www.reddit.com/r/ethereum/about/moderators" target="_blank">r/ethereum</a>     │
-│ hobbies none. all listings in alphabetical order.                            │
-│                                                                              │
-│ i do not do any <del>frontend</del>, <del>web-design</del>, <del>javascript</del>, <del>user-experience</del>.           │
-└───┬──────────────────────────────────────────────────────────────────────┬───┘
-    │ more details (and css) at <a href="http://stackoverflow.com/story/schoedon">stackoverflow</a>, <a href="https://github.com/5chdn" target="_blank">github</a>, <a href="https://keybase.io/5chdn">keybase</a>, <a href="https://twitter.com/5chdn" target="_blank">twitter</a>.   │
-    │                                                                      │
-    │ contact me via <a href="tg://resolve?domain=schdn">telegram</a>, <a href="tel:+491711816751">signal</a>, <a href="xmpp:5chdn@systemli.org">xmpp</a>/otr fingerprint <em>varies</em>         │
-    │ contact me via <a href="mailto:schoedon@uni-potsdam.de">mail</a>/pgp fingerprint <em>pub 4096r/61f42a05</em> (<a href="./0x61f42a05.asc" target="_blank">key</a>)         │
-    │            d517 19cc b4a8 e6f6 17fd 19f2 <u>6cb8 1e14 61f4 2a05</u>         │
-    │                                                                      │
-    │ i don't use <del>facebook</del>, <del>whatsapp</del>, <del>skype</del>, <del>threema</del>. no cats had to be    │
-    │ pictured for this site. magically works without css and javascript.  │
-    └──────────────────────────────────────────────────────────────────────┘</pre>
+  <body bgcolor="#000000" text="#a6cee3" link="#b2df8a" alink="#b2df8a" vlink="#b2df8a">
+    <pre>
+    <font color="#fb9a99">&#36; systemctl start cv</font>
+
+  :-) ...            5chdn &#47; something with computers
+  ===================================================
+
+    <font color="#fb9a99">&#36; uname -a</font>
+  i'm born, grew up and live in berlin, not 30 yet
+  my two kids call me afri, you can do that, too
+                      ----
+
+    <font color="#fb9a99">&#36; grep -A2 -i "education" &#126;&#47;cv | tail -n2 | sort -d</font>
+  b.sc. in applied computer sciences, environmental informatics, simulation
+  m.sc. in computer graphics systems, geoinformation sciences, visualization
+
+    <font color="#fb9a99">&#36; grep -A6 -i "experience" &#126;&#47;cv | tail -n6 | sort -d</font>
+  backend developer, programmer
+  decentralized systems, peer-to-peer, blockchain
+  linux system adminstration, it operations, devops
+  radio station technology, streaming, scheduling, automation
+  software engineering, development, deployment
+  technical communication, community management
+
+    <font color="#fb9a99">&#36; grep -A6 -i "worked&#92; for" &#126;&#47;cv | tail -n6 | sort -d</font>
+  <a href="http://www.abgeordnetenwatch.de/" target="_blank">abgeordnetenwatch</a> (parlamentwatch e.v.)
+  <a href="http://www.bfs.de/" target="_blank">german federal office for radiation protection</a> (bundesamt)
+  <a href="https://hpi.de/" target="_blank">hasso plattner institute</a> (gmbh)
+  <a href="https://www.htw-berlin.de/" target="_blank">hochschule f&uuml;r technik und wirtschaft berlin</a> (a&ouml;r)
+  <a href="https://www.route360.net/" target="_blank">motion intelligence</a> (gmbh)
+  <a href="https://votesapp.net/" target="_blank">votesapp</a> (stimmungsapp n.e.v.)
+
+    <font color="#fb9a99">&#36; top -bn1</font>
+  member of <a href="https://ccc.de/" target="_blank">ccc</a>, <a href="https://www.eff.org/">eff</a>, <a href="https://www.fiff.de/">fiff</a>, <a href="https://fsfe.org/">fsfe</a>, <a href="https://www.gi.de/" target="_blank">gi</a>. moderator at <a href="https://ethereum.stackexchange.com/users?tab=moderators" target="_blank">ethereum.se</a>, <a href="https://www.reddit.com/r/ethereum/about/moderators" target="_blank">r&#47;ethereum</a>
+
+    <font color="#fb9a99">&#36; rm -rf &#47;</font>
+  i do not do any <del>frontend</del>, <del>web-design</del>, <del>javascript</del>, <del>user-experience</del>.
+
+    <font color="#fb9a99">&#36; vim &#126;&#47;.profile</font>
+  more details (and css) at <a href="http://stackoverflow.com/story/schoedon">stackoverflow</a>, <a href="https://github.com/5chdn" target="_blank">github</a>, <a href="https://keybase.io/5chdn">keybase</a>, <a href="https://twitter.com/5chdn" target="_blank">twitter</a>.
+  contact me via <a href="tg://resolve?domain=schdn">telegram</a>, <a href="tel:+491711816751">signal</a>, <a href="xmpp:5chdn@systemli.org">xmpp</a>&#47;otr fingerprint <em>varies</em>
+  contact me via <a href="mailto:schoedon@uni-potsdam.de">mail</a>&#47;pgp fingerprint <em>pub 4096r&#47;61f42a05</em> (<a href="./0x61f42a05.asc" target="_blank">key</a>)
+             d517 19cc b4a8 e6f6 17fd 19f2 6cb8 1e14 61f4 2a05
+                                           -------------------
+  i don't use <del>facebook</del>, <del>whatsapp</del>, <del>skype</del>, <del>threema</del>. no cats had to be
+  pictured for this site. magically works without css and javascript.
+    <font color="#fb9a99">&#126;</font>
+    <font color="#fb9a99">&#126;</font>
+    <font color="#fb9a99">&#126;</font>
+    <font color="#fb9a99">:q!</font>
+
+    <font color="#fb9a99">&#36; _</font></pre>
   </body>
 </html>
