--- a/index.htm
+++ b/index.htm
@@ -19,11 +19,11 @@
   my two kids call me afri, you can do that, too
                       ----
 
-    <font color="#fb9a99">&#36; grep -A2 -i "education" &#126;&#47;cv | tail -n2 | sort -d</font>
+    <font color="#fb9a99">&#36; detex &#126;&#47;cv.tex | grep -A2 -i "education" | tail -n2 | sort -d</font>
   b.sc. in applied computer sciences, environmental informatics, simulation
   m.sc. in computer graphics systems, geoinformation sciences, visualization
 
-    <font color="#fb9a99">&#36; grep -A6 -i "experience" &#126;&#47;cv | tail -n6 | sort -d</font>
+    <font color="#fb9a99">&#36; detex &#126;&#47;cv.tex | grep -A6 -i "experience" | tail -n6 | sort -d</font>
   backend developer, programmer
   decentralized systems, peer-to-peer, blockchain
   linux system adminstration, it operations, devops
@@ -31,7 +31,7 @@
   software engineering, development, deployment
   technical communication, community management
 
-    <font color="#fb9a99">&#36; grep -A6 -i "worked&#92; for" &#126;&#47;cv | tail -n6 | sort -d</font>
+    <font color="#fb9a99">&#36; detex &#126;&#47;cv.tex | grep -A6 -i "worked&#92; for" | tail -n6 | sort -d</font>
   <a href="http://www.abgeordnetenwatch.de/" target="_blank">abgeordnetenwatch</a> (parlamentwatch e.v.)
   <a href="http://www.bfs.de/" target="_blank">german federal office for radiation protection</a> (bundesamt)
   <a href="https://hpi.de/" target="_blank">hasso plattner institute</a> (gmbh)
@@ -41,9 +41,6 @@
 
     <font color="#fb9a99">&#36; top -bn1</font>
   member of <a href="https://ccc.de/" target="_blank">ccc</a>, <a href="https://www.eff.org/">eff</a>, <a href="https://www.fiff.de/">fiff</a>, <a href="https://fsfe.org/">fsfe</a>, <a href="https://www.gi.de/" target="_blank">gi</a>. moderator at <a href="https://ethereum.stackexchange.com/users?tab=moderators" target="_blank">ethereum.se</a>, <a href="https://www.reddit.com/r/ethereum/about/moderators" target="_blank">r&#47;ethereum</a>
-
-    <font color="#fb9a99">&#36; rm -rf &#47;</font>
-  i do not do any <del>frontend</del>, <del>web-design</del>, <del>javascript</del>, <del>user-experience</del>.
 
     <font color="#fb9a99">&#36; vim &#126;&#47;.profile</font>
   more details (and css) at <a href="http://stackoverflow.com/story/schoedon">stackoverflow</a>, <a href="https://github.com/5chdn" target="_blank">github</a>, <a href="https://keybase.io/5chdn">keybase</a>, <a href="https://twitter.com/5chdn" target="_blank">twitter</a>.
