--- a/index.htm
+++ b/index.htm
@@ -9,13 +9,13 @@
 
   <body bgcolor="#000000" text="#a6cee3" link="#b2df8a" alink="#b2df8a" vlink="#b2df8a">
     <pre>
-    <font color="#fb9a99">&#36; systemctl start cv</font>
+    <font color="#fb9a99">&#36; systemctl start cv.service</font>
 
   :-) ...            5chdn &#47; something with computers
   ===================================================
 
     <font color="#fb9a99">&#36; uname -a</font>
-  i'm born, grew up and live in berlin, not 30 yet
+  i'm born, grew up and live in berlin, not 30, yet
   my two kids call me afri, you can do that, too
                       ----
 
@@ -26,7 +26,7 @@
     <font color="#fb9a99">&#36; detex &#126;&#47;cv.tex | grep -A6 -i "experience" | tail -n6 | sort -d</font>
   backend developer, programmer
   decentralized systems, peer-to-peer, blockchain
-  linux system adminstration, it operations, devops
+  linux system administration, it operations, devops
   radio station technology, streaming, scheduling, automation
   software engineering, development, deployment
   technical communication, community management
