remove obsolete html tags

--- a/index.htm
+++ b/index.htm
@@ -1,14 +1,11 @@
 <!doctype html>
-<html>
-
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <link rel="canonical" href="http://5chdn.co/">
-    <title>5chdn / something with computers</title>
-  </head>
-
-  <body bgcolor="#000000" text="#a6cee3" link="#b2df8a" alink="#b2df8a" vlink="#b2df8a">
-    <pre>
+<meta http-equiv="content-type" content="text/html; charset=utf-8">
+<meta name="theme-color" content="#a6cee3">
+<link rel="icon" sizes="64x64" href="favicon.png">
+<link rel="canonical" href="https://5chdn.co/">
+<title>5chdn / something with computers</title>
+<body bgcolor="#000000" text="#a6cee3" link="#b2df8a" alink="#b2df8a" vlink="#b2df8a">
+  <pre>
     <font color="#fb9a99">&#36; systemctl start cv.service</font>
 
   :-) ...            5chdn &#47; something with computers
@@ -56,5 +53,4 @@
     <font color="#fb9a99">:q!</font>
 
     <font color="#fb9a99">&#36; _</font></pre>
-  </body>
-</html>
+</body>
