--- a/index.htm
+++ b/index.htm
@@ -12,9 +12,9 @@
   ===================================================
 
     <font color="#fb9a99">&#36; uname -a</font>
-  i'm born, grew up and live in berlin, not 30, yet
-  my two kids call me afri, you can do that, too
-                      ----
+  i was born, grew up and live in berlin; not 30 yet
+  my two kids call me afri, you can do that too
+                      ^---
 
     <font color="#fb9a99">&#36; detex &#126;&#47;cv.tex | grep -A2 -i "education" | tail -n2 | sort -d</font>
   b.sc. in applied computer sciences, environmental informatics, simulation
@@ -41,10 +41,11 @@
 
     <font color="#fb9a99">&#36; vim &#126;&#47;.profile</font>
   more details (and css) at <a href="http://stackoverflow.com/story/schoedon">stackoverflow</a>, <a href="https://github.com/5chdn" target="_blank">github</a>, <a href="https://keybase.io/5chdn">keybase</a>, <a href="https://twitter.com/5chdn" target="_blank">twitter</a>.
-  contact me via <a href="tg://resolve?domain=schdn">telegram</a>, <a href="tel:+491711816751">signal</a>, <a href="xmpp:5chdn@systemli.org">xmpp</a>&#47;otr fingerprint <em>varies</em>
+  contact me via <a href="tg://resolve?domain=c5hdn">telegram</a>, <a href="tel:+4915126136831">signal</a>, <a href="xmpp:5chdn@systemli.org">xmpp</a>&#47;otr fingerprint <em>varies</em>
   contact me via <a href="mailto:schoedon@uni-potsdam.de">mail</a>&#47;pgp fingerprint <em>pub 4096r&#47;61f42a05</em> (<a href="./0x61f42a05.asc" target="_blank">key</a>)
              d517 19cc b4a8 e6f6 17fd 19f2 6cb8 1e14 61f4 2a05
-                                           -------------------
+                                           ^------------------
+
   i don't use <del>facebook</del>, <del>whatsapp</del>, <del>skype</del>, <del>threema</del>. no cats had to be
   pictured for this site. magically works without css and javascript.
     <font color="#fb9a99">&#126;</font>
