Add parity tech

--- a/index.htm
+++ b/index.htm
@@ -12,9 +12,8 @@
   ===================================================
 
     <font color="#fb9a99">&#36; uname -a</font>
-  i was born, grew up and live in berlin; not 30 yet
-  my two kids call me afri, you can do that too
-                      ^---
+  born, raised, and still living in berlin; my kids call me afri
+                                                            ^---
 
     <font color="#fb9a99">&#36; detex &#126;&#47;cv.tex | grep -A2 -i "education" | tail -n2 | sort -d</font>
   b.sc. in applied computer sciences, environmental informatics, simulation
@@ -28,12 +27,13 @@
   software engineering, development, deployment
   technical communication, community management
 
-    <font color="#fb9a99">&#36; detex &#126;&#47;cv.tex | grep -A6 -i "worked&#92; for" | tail -n6 | sort -d</font>
+    <font color="#fb9a99">&#36; detex &#126;&#47;cv.tex | grep -A7 -i "worked&#92; for" | tail -n7 | sort -d</font>
   <a href="http://www.abgeordnetenwatch.de/" target="_blank">abgeordnetenwatch</a> (parlamentwatch e.v.)
   <a href="http://www.bfs.de/" target="_blank">german federal office for radiation protection</a> (bundesamt)
   <a href="https://hpi.de/" target="_blank">hasso plattner institute</a> (gmbh)
   <a href="https://www.htw-berlin.de/" target="_blank">hochschule f&uuml;r technik und wirtschaft berlin</a> (a&ouml;r)
   <a href="https://www.route360.net/" target="_blank">motion intelligence</a> (gmbh)
+  <a href="https://parity.io/" target="_blank">parity technologies</a> (ltd)
   <a href="https://votesapp.net/" target="_blank">votesapp</a> (stimmungsapp n.e.v.)
 
     <font color="#fb9a99">&#36; top -bn1</font>
