don't speak slack either

--- a/index.htm
+++ b/index.htm
@@ -41,13 +41,13 @@
 
     <font color="#fb9a99">&#36; vim &#126;&#47;.profile</font>
   more details (and css) at <a href="http://stackoverflow.com/story/schoedon">stackoverflow</a>, <a href="https://github.com/5chdn" target="_blank">github</a>, <a href="https://keybase.io/5chdn">keybase</a>, <a href="https://twitter.com/5chdn" target="_blank">twitter</a>.
-  contact me via <a href="tg://resolve?domain=a5fri">telegram</a>, <a href="tel:+491603133337">signal</a>, <a href="xmpp:5chdn@systemli.org">xmpp</a>&#47;otr fingerprint <em>varies</em>
+  contact me via <a href="tg://resolve?domain=a5fri">telegram</a>, <a href="tel:+491603133337">signal</a>, <a href="wr://resolve?domain=5chdn">wire</a>, <a href="xmpp:5chdn@systemli.org">xmpp</a>&#47;otr fingerprint <em>varies</em>
   contact me via <a href="mailto:afri@mailbox.org">mail</a>&#47;pgp fingerprint <em>pub 4096r&#47;16793200</em> (<a href="./0x16793200.asc" target="_blank">key</a>)
              0cf0 851e d075 bf86 3d8f 9b44 a22f 3903 1679 3200
                                            ^------------------
 
-  i don't use <del>facebook</del>, <del>whatsapp</del>, <del>skype</del>, <del>threema</del>, or <del>discord</del>. no cats had to be
-  pictured for this site. magically works without css and javascript.
+  i don't use <del>facebook</del>, <del>whatsapp</del>, <del>skype</del>, <del>threema</del>, <del>slack</del>, or <del>discord</del>. no cats
+  had to be pictured for this site. magically works without css and javascript.
     <font color="#fb9a99">&#126;</font>
     <font color="#fb9a99">&#126;</font>
     <font color="#fb9a99">&#126;</font>
