--- a/index.htm
+++ b/index.htm
@@ -2,49 +2,40 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="theme-color" content="#a6cee3">
 <link rel="icon" sizes="64x64" href="favicon.png">
-<link rel="canonical" href="https://5chdn.co/">
-<title>5chdn / something with computers</title>
+
+<title>roninkaizen / also something with computers</title>
 <body bgcolor="#000000" text="#a6cee3" link="#b2df8a" alink="#b2df8a" vlink="#b2df8a">
   <pre>
     <font color="#fb9a99">&#36; systemctl start cv.service</font>
 
-  :-) ...            5chdn &#47; something with computers
+  :-) ...            roninkaizen &#47; something with ethereum and networks
   ===================================================
 
     <font color="#fb9a99">&#36; uname -a</font>
-  born, raised, and still living in berlin; my kids call me afri
+  born, raised, and still living in kiel; my friends call me ronin
                                                             ^---
 
     <font color="#fb9a99">&#36; detex &#126;&#47;cv.tex | grep -A2 -i "education" | tail -n2 | sort -d</font>
-  b.sc. in applied computer sciences, environmental informatics, simulation
-  m.sc. in computer graphics systems, geoinformation sciences, visualization
+  informatics-salesman
+  working since 2000 as solver
 
     <font color="#fb9a99">&#36; detex &#126;&#47;cv.tex | grep -A6 -i "experience" | tail -n6 | sort -d</font>
-  backend developer, programmer
-  decentralized systems, peer-to-peer, blockchain
-  linux system administration, it operations, devops
-  radio station technology, streaming, scheduling, automation
-  software engineering, development, deployment
-  technical communication, community management
+  novell-windows-linux system administrator, programmer
+  decentralized systems, microssystems,blockchain
+  linux system administration, it operations, 
+  scheduling, automation
+  software engineering, development, academical research
+  technical communication, technical illustration
 
     <font color="#fb9a99">&#36; detex &#126;&#47;cv.tex | grep -A7 -i "worked&#92; for" | tail -n7 | sort -d</font>
-  <a href="http://www.abgeordnetenwatch.de/" target="_blank">abgeordnetenwatch</a> (parlamentwatch e.v.)
-  <a href="http://www.bfs.de/" target="_blank">german federal office for radiation protection</a> (bundesamt)
-  <a href="https://hpi.de/" target="_blank">hasso plattner institute</a> (gmbh)
-  <a href="https://www.htw-berlin.de/" target="_blank">hochschule f&uuml;r technik und wirtschaft berlin</a> (a&ouml;r)
-  <a href="https://www.route360.net/" target="_blank">motion intelligence</a> (gmbh)
-  <a href="https://parity.io/" target="_blank">parity technologies</a> (ltd)
-  <a href="https://votesapp.net/" target="_blank">votesapp</a> (stimmungsapp n.e.v.)
+    <a href="https://votesapp.net/" target="_blank">votesapp</a> (stimmungsapp n.e.v.)
 
     <font color="#fb9a99">&#36; top -bn1</font>
   member of <a href="https://ccc.de/" target="_blank">ccc</a>, <a href="https://www.eff.org/">eff</a>, <a href="https://www.fiff.de/">fiff</a>, <a href="https://fsfe.org/">fsfe</a>, <a href="https://www.gi.de/" target="_blank">gi</a>. moderator at <a href="https://ethereum.stackexchange.com/users?tab=moderators" target="_blank">ethereum.se</a>, <a href="https://www.reddit.com/r/ethereum/about/moderators" target="_blank">r&#47;ethereum</a>
 
     <font color="#fb9a99">&#36; vim &#126;&#47;.profile</font>
-  more details (and css) at <a href="http://stackoverflow.com/story/schoedon">stackoverflow</a>, <a href="https://github.com/5chdn" target="_blank">github</a>, <a href="https://keybase.io/5chdn">keybase</a>, <a href="https://twitter.com/5chdn" target="_blank">twitter</a>.
-  contact me via <a href="tg://resolve?domain=a5fri">telegram</a>, <a href="tel:+491603133337">signal</a>, <a href="wr://resolve?domain=5chdn">wire</a>, <a href="xmpp:5chdn@systemli.org">xmpp</a>&#47;otr fingerprint <em>varies</em>
-  contact me via <a href="mailto:afri@mailbox.org">mail</a>&#47;pgp fingerprint <em>pub 4096r&#47;16793200</em> (<a href="./0x16793200.asc" target="_blank">key</a>)
-             0cf0 851e d075 bf86 3d8f 9b44 a22f 3903 1679 3200
-                                           ^------------------
+  more details (and css) at <a href="https://github.com/roninkaizen" target="_blank">github</a>,
+             
 
   i don't use <del>facebook</del>, <del>whatsapp</del>, <del>skype</del>, <del>threema</del>, <del>slack</del>, or <del>discord</del>. no cats
   had to be pictured for this site. magically works without css and javascript.
