--- a/index.htm
+++ b/index.htm
@@ -12,26 +12,28 @@
   ===================================================
 
     <font color="#fb9a99">&#36; uname -a</font>
-  born, raised, and still living in kiel; my friends call me ronin
+  born, raised, and still living in kiel; my friends call me ronin; 
                                                             ^---
 
     <font color="#fb9a99">&#36; detex &#126;&#47;cv.tex | grep -A2 -i "education" | tail -n2 | sort -d</font>
   informatics-salesman
-  working since 2000 as solver
+  working since 2000 as solver within various industries,
+  monitoring solar-parks, building tiny autonomous surveillance ugv bots
 
     <font color="#fb9a99">&#36; detex &#126;&#47;cv.tex | grep -A6 -i "experience" | tail -n6 | sort -d</font>
-  novell-windows-linux system administrator, programmer
-  decentralized systems, microssystems,blockchain
+  novell-windows-linux system administrator, programmer,
+  decentralized systems, microssystems,
+  ethereum-blockchain-only
   linux system administration, it operations, 
-  scheduling, automation
+  scheduling, automation, robots, surveillance
   software engineering, development, academical research
-  technical communication, technical illustration
+  technical communication, technical illustration, technical documentation
 
     <font color="#fb9a99">&#36; detex &#126;&#47;cv.tex | grep -A7 -i "worked&#92; for" | tail -n7 | sort -d</font>
-    <a href="https://votesapp.net/" target="_blank">votesapp</a> (stimmungsapp n.e.v.)
+    <a href="https://touchart.de/" target="_blank">linux basic admin</a> (touchart-kiel)
 
     <font color="#fb9a99">&#36; top -bn1</font>
-  member of <a href="https://ccc.de/" target="_blank">ccc</a>, <a href="https://www.eff.org/">eff</a>, <a href="https://www.fiff.de/">fiff</a>, <a href="https://fsfe.org/">fsfe</a>, <a href="https://www.gi.de/" target="_blank">gi</a>. moderator at <a href="https://ethereum.stackexchange.com/users?tab=moderators" target="_blank">ethereum.se</a>, <a href="https://www.reddit.com/r/ethereum/about/moderators" target="_blank">r&#47;ethereum</a>
+  member of "not-to-metion" org
 
     <font color="#fb9a99">&#36; vim &#126;&#47;.profile</font>
   more details (and css) at <a href="https://github.com/roninkaizen" target="_blank">github</a>,
