--- a/index.htm
+++ b/index.htm
@@ -30,7 +30,7 @@
   technical communication, technical illustration, technical documentation
 
     <font color="#fb9a99">&#36; detex &#126;&#47;cv.tex | grep -A7 -i "worked&#92; for" | tail -n7 | sort -d</font>
-    <a href="https://touchart.de/" target="_blank">linux basic admin</a> (touchart-kiel)
+    <a href="https://touchart.de/" target="_blank">linux basic admin</a> (touchart)
 
     <font color="#fb9a99">&#36; top -bn1</font>
   member of "not-to-metion" org
